OET-174 override fix for metabox expand/collapse function conflict with ACF

--- a/css/back-style.css
+++ b/css/back-style.css
@@ -704,3 +704,6 @@ input#secondary-save-post {float: left;}
     box-shadow: unset;
 }
 /* -------- End of Frontend Styles ----------*/
+.edit-post-meta-boxes-area #poststuff .stuffbox>h3, .edit-post-meta-boxes-area #poststuff h2.hndle { width:95%; }
+.edit-post-meta-boxes-area .postbox.acf-postbox.closed { border-bottom: 1px solid #c3c4c7; }
+.meta-box-sortables .postbox button.handlediv { float:right; }
